Change main content to display grid to fix menu being cut off

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,9 +18,9 @@ body {
 
 #main-content {
     align-items: center;
-    display: flex;
+    display: grid;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
 }
 
 /*Home*/
